dataset1235/2025-2/1153765216/users/3635356750/executions/3138746197_3221148872.log
== SUBMISSION (2025-08-14 17:42:49)
-- CODE: 
print(40+35)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
75
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
---- user output:
75
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 17:40:46)
-- CODE: 
prient("40+35")=
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
-- ERROR:
File "XXXX", line 1
    prient("40+35")=
    ^^^^^^^^^^^^^^^
SyntaxError: cannot assign to function call
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
-- ERROR:
File "XXXX", line 1
    prient("40+35")=
    ^^^^^^^^^^^^^^^
SyntaxError: cannot assign to function call
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 17:38:19)
-- CODE: 
prient(Sosigenes e Jocasta foram a um restaurante.Ele gastou R$ 40 e gastou R$35.Esreva um programa)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
-- ERROR:
File "XXXX", line 1
    prient(Sosigenes e Jocasta foram a um restaurante.Ele gastou R$ 40 e gastou R$35.Esreva um programa)
                                                                                    ^
SyntaxError: invalid decimal literal
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
-- ERROR:
File "XXXX", line 1
    prient(Sosigenes e Jocasta foram a um restaurante.Ele gastou R$ 40 e gastou R$35.Esreva um programa)
                                                                                    ^
SyntaxError: invalid decimal literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 17:41:17)
-- CODE: 
prient(40+35)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    prient(40+35)
    ^^^^^^
NameError: name 'prient' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    prient(40+35)
    ^^^^^^
NameError: name 'prient' is not defined. Did you mean: 'print'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
